[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/interface/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://source/interface/hud/TopPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/interface/BuildingPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/interface/Newspaper.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/interface/NamePanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/interface/Letter.tscn" type="PackedScene" id=6]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TopPanel" parent="." instance=ExtResource( 2 )]

[node name="BuildingPopup" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -45.5
margin_right = 57.0
margin_bottom = 45.5

[node name="Newspaper" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 22.8334
margin_top = 41.2559
margin_right = -25.1666
margin_bottom = -22.7441

[node name="NamePanel" parent="." instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -10.0
margin_right = 35.0
margin_bottom = 0.0

[node name="Letter" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -56.5
margin_right = 40.0
margin_bottom = 56.5
[connection signal="hint_purchased" from="TopPanel" to="." method="_on_TopPanel_hint_purchased"]
[connection signal="invested" from="BuildingPopup" to="." method="_on_BuildingPopup_invested"]
